Adjusted to display Day
Made adjustments to cells so that the day of the week could be displayed next to the date on both the Trainer and Trainee Schedules

--- a/Sheet3.cls
+++ b/Sheet3.cls
@@ -24,7 +24,7 @@ Private Sub cmdSaveTnE_Click()
             
                 Call Save
                 Call Schedule
-                Call Reset
+                Call TraineeReset
             
             End If
     
