build: added validation for dates and EE numbers
Now sends Proper Error for missing dates when loading Trainee Schedule
Now Checks for duplicate EE numbers before saving New Employees

--- a/Sheet2.cls
+++ b/Sheet2.cls
@@ -1,5 +1,11 @@
 Private Sub CommandButton1_Click()
-    Call LoadTnR
+
+    if ValTnRDates = True Then
+
+        Call LoadTnR
+
+    end if
+    
 End Sub
 
 Private Sub CommandButton2_Click()
